Alignment fixes

--- a/src/app/components/Skills/skills.css
+++ b/src/app/components/Skills/skills.css
@@ -1,23 +1,22 @@
 .skillContainer {
   margin-top: 20px;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: 'center';
 }
 .skillItem {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin:10px 5px;
-  min-width: 20%;
+  margin:8px 5px;
   background-color: aliceblue;
   color:#151c3a ;
-  padding: 5px 10px;
+  padding: 2px 8px;
   border-radius: 5px;
   ;
 }
 
 .skillItem .name {
   margin-right: 10px;
+  font-size: 12px;
 }
